--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div id="app">
-        <div id="d_title">
+        <div id="d_title" class="stuff-box">
             <h1>{{ title }}</h1>
             <p>{{ subtitle }}</p>
         </div>
 
-        <div id="game">
-            <h3>{{ getNextWord }}</h3>
+        <div id="game" class="stuff-box">
+            <h3 id="next_word">{{ getNextWord }}</h3>
             <label for="typing_box">Type here!</label><br>
             <input type="text" id="typing_box" @keyup="checkTypingBox($event)">
         </div>
