--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
             <p>{{ subtitle }}</p>
         </div>
 
-        <div id="game" class="stuff-box">
+        <div v-if="not_playing">
+            <div id="menu" class="stuff-box">
+                <h2>Play</h2>
+                <a href="#" class="play_button" @click="playGame">Play</a>
+            </div>
+
+            <div v-for="(score, index) in player_scores" class="stuff-box">
+                <h5>Player {{ index }}: {{ score }}</h5>
+            </div>
+        </div>
+
+        <div v-else id="game" class="stuff-box">
             <h3 id="next_word">{{ getNextWord }}</h3>
             <label for="typing_box">Type here!</label><br>
             <input type="text" id="typing_box" @keyup="checkTypingBox($event)">
