Moved some globals into the Vue app, need to fix computed method

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="d_title" class="stuff-box">
             <h1>{{ title }}</h1>
             <p>{{ subtitle }}</p>
+            <p>Game is currently set to last for {{ gameLenInSeconds }} seconds</p>
         </div>
 
         <div v-if="display_menu">
